買い物メモ削除処理のAPIリクエスト繋ぎこみ
