# src/mocks/openapi.json
@@ -550,6 +550,47 @@
             "description": "Authorization information is missing or invalid."
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "shopping"
+        ],
+        "summary": "買い物削除API",
+        "description": "買い物メモを削除します<br/>\n",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "owner_id",
+            "description": "オーナーID(所属している家庭単位のID)",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer",
+                    "description": "買い物メモのID\n"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Authorization information is missing or invalid."
+          }
+        }
       }
     }
   },
